sl-lsl/tests/corpus/error/return_in_void.lsl
// An event handler (void context) cannot return a value.
default
{
    state_entry()
    {
        return 5;
    }
}
